--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -1,3 +1,12 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 .container {
   font-family: "Roboto", sans-serif;
+  max-width: 1200px;
+  padding: 0 15px;
+  margin: 0 auto;
 }
