--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -10,137 +10,158 @@
   padding: 0 15px;
   margin: 0 auto;
 }
-.header{ 
+
+.header {
   display: flex;
   align-items: center;
-width: 1440px;
-height: 102px;
-flex-shrink: 0;
+  width: 1440px;
+  height: 102px;
+  flex-shrink: 0;
 }
-.header__logo{
-width: 68.552px;
-height: 41.527px;
-margin-top: 29px;
-flex-shrink: 0;
+
+.header__logo {
+  width: 68.552px;
+  height: 41.527px;
+  margin-top: 29px;
+  flex-shrink: 0;
 }
-.nav{
+
+.nav {
   display: flex;
   flex-direction: row;
-  justify-content: space-evenly; 
+  justify-content: space-evenly;
 }
-.nav__main{
-width: 68px;
-height: 11.657px;
-margin-right: 46px;
-margin-left: 344px;
-margin: top 44px;
-flex-shrink: 0;
-color: var(--Gray-1, #333);
-font-family: Roboto;
-font-size: 12px;
-font-style: normal;
-font-weight: 400;
-line-height: 12px; /* 100% */
-letter-spacing: 2.4px;
-text-transform: uppercase;
-}
-.main{
+
+.nav__main {
   width: 68px;
-height: 11.657px;
-flex-shrink: 0;
-color: var(--Gray-1, #333);
-font-family: Roboto;
-font-size: 12px;
-font-style: normal;
-font-weight: 400;
-line-height: 12px; /* 100% */
-letter-spacing: 2.4px;
-text-transform: uppercase;
+  height: 11.657px;
+  margin-right: 46px;
+  margin-left: 344px;
+  margin: top 44px;
+  flex-shrink: 0;
+  color: var(--Gray-1, #333);
+  font-family: Roboto;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 12px;
+  /* 100% */
+  letter-spacing: 2.4px;
+  text-transform: uppercase;
 }
-.main__low__line{
+
+.main {
   width: 68px;
-height: 0.971px;
-margin-top: 4px;
-flex-shrink: 0;
+  height: 11.657px;
+  flex-shrink: 0;
+  color: var(--Gray-1, #333);
+  font-family: Roboto;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 12px;
+  /* 100% */
+  letter-spacing: 2.4px;
+  text-transform: uppercase;
 }
-.main__top__line{
-width: 68px;
-height: 0.971px;
-flex-shrink: 0;
-margin-top: 39px; 
+
+.main__low__line {
+  width: 68px;
+  height: 0.971px;
+  margin-top: 4px;
+  flex-shrink: 0;
 }
-.nav__gallery{
-width: 65px;
-height: 12px;
-margin-right: 61px;
-color: var(--Gray-1, #333);
-font-family: Roboto;
-font-size: 12px;
-font-style: normal;
-font-weight: 400;
-line-height: 12px; /* 100% */
-letter-spacing: 2.4px;
-text-transform: uppercase;
+
+.main__top__line {
+  width: 68px;
+  height: 0.971px;
+  flex-shrink: 0;
+  margin-top: 39px;
 }
-.nav__projects{
-width: 76px;
-height: 11px;
-margin-right: 55px;
-flex-shrink: 0;
-color: var(--Gray-1, #333);
-font-family: Roboto;
-font-size: 12px;
-font-style: normal;
-font-weight: 400;
-line-height: 12px; /* 100% */
-letter-spacing: 2.4px;
-text-transform: uppercase;
+
+.nav__gallery {
+  width: 65px;
+  height: 12px;
+  margin-right: 61px;
+  color: var(--Gray-1, #333);
+  font-family: Roboto;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 12px;
+  /* 100% */
+  letter-spacing: 2.4px;
+  text-transform: uppercase;
 }
-.nav__certifications{
-width: 123px;
-height: 11px;
-margin-right: 49px;
-flex-shrink: 0;
-color: var(--Gray-1, #333);
-font-family: Roboto;
-font-size: 12px;
-font-style: normal;
-font-weight: 400;
-line-height: 12px; /* 100% */
-letter-spacing: 2.4px;
-text-transform: uppercase;
+
+.nav__projects {
+  width: 76px;
+  height: 11px;
+  margin-right: 55px;
+  flex-shrink: 0;
+  color: var(--Gray-1, #333);
+  font-family: Roboto;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 12px;
+  /* 100% */
+  letter-spacing: 2.4px;
+  text-transform: uppercase;
 }
-.nav__contacts{
-width: 79px;
-height: 11.657px;
-margin-right: 269px;
-flex-shrink: 0;
-color: var(--Gray-1, #333);
-font-family: Roboto;
-font-size: 12px;
-font-style: normal;
-font-weight: 400;
-line-height: 12px; /* 100% */
-letter-spacing: 2.4px;
-text-transform: uppercase;
+
+.nav__certifications {
+  width: 123px;
+  height: 11px;
+  margin-right: 49px;
+  flex-shrink: 0;
+  color: var(--Gray-1, #333);
+  font-family: Roboto;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 12px;
+  /* 100% */
+  letter-spacing: 2.4px;
+  text-transform: uppercase;
 }
-.project-lorum{
+
+.nav__contacts {
+  width: 79px;
+  height: 11.657px;
+  margin-right: 269px;
+  flex-shrink: 0;
+  color: var(--Gray-1, #333);
+  font-family: Roboto;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 12px;
+  /* 100% */
+  letter-spacing: 2.4px;
+  text-transform: uppercase;
+}
+
+.project-lorum {
   display: flex;
   flex-direction: row;
 }
-.project-lorum__left_path{
+
+.project-lorum__left_path {
   display: flex;
   flex-direction: column;
   justify-content: center;
 }
-.building__foto{
+
+.building__foto {
   width: 770px;
-height: 829px;
-margin-left: 535px;
-margin-right: 135px;
-margin-top: 105px;
-flex-shrink: 0;
+  height: 829px;
+  margin-left: 535px;
+  margin-right: 135px;
+  margin-top: 105px;
+  flex-shrink: 0;
 }
+
 .main-focus {
   display: grid;
   grid-template-rows: 0.5fr, 2fr;
@@ -227,6 +248,7 @@ flex-shrink: 0;
 .contacts__form-textarea {
   margin-bottom: 0;
   height: 147px;
+  resize: none;
 }
 
 .contacts__form ::placeholder {
@@ -239,7 +261,7 @@ flex-shrink: 0;
   letter-spacing: 0.56px;
 }
 
-.contacts__link {
+.contacts__btn {
   width: 222px;
   padding: 30px 49px;
   background-color: #333;
@@ -251,21 +273,21 @@ flex-shrink: 0;
   line-height: 12px;
   letter-spacing: 2.4px;
   text-transform: uppercase;
-  text-decoration: none;
-  display: inline-block;
   position: relative;
+  border: none;
+  text-align: center;
+  display: flex;
 
 }
 
-.contacts__link::after {
+.contacts__btn::after {
   position: absolute;
   content: '';
   width: 18px;
   height: 9px;
   background-image: url('../images/icons/arrow-right.svg');
   background-repeat: no-repeat;
-  margin-left: 15px;
-  cursor: pointer;
+  right: 49px;
 }
 
 .footer {
@@ -279,8 +301,10 @@ flex-shrink: 0;
 }
 
 .footer__inner {
-  display: flex;
-  justify-content: space-between;
+  /* display: flex;
+  justify-content: space-between; */
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
 }
 
 .footer__info,
@@ -295,6 +319,7 @@ flex-shrink: 0;
 
 .footer__contacts {
   width: 345px;
+  justify-content: space-between;
 }
 
 .footer__info-text,
@@ -320,7 +345,33 @@ flex-shrink: 0;
   letter-spacing: 0.42px;
   display: inline-block;
   cursor: pointer;
-  margin-bottom: 16px;
+
+  text-decoration: none;
+}
+
+.footer__info-link+.footer__info-link {
+  margin-top: 16px;
+}
+
+.footer__contacts-link+.footer__contacts-link {
+  margin-top: 32px;
+}
+
+.footer__contacts-link {
+  display: flex;
+  align-items: start;
+}
+
+.footer__contacts-mail {
+  align-items: center;
+}
+
+.footer__contacts-img {
+  margin-right: 14px;
+}
+
+.footer__contacts-label {
+  margin-right: 19px;
 }
 
 .footer__social-box {
