--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -128,8 +128,74 @@ a{
   grid-row-end: 2;
 }
 .project{
-  width: 277,76px;
-  height: 64px;
+  color: var(--Gray-4, #BDBDBD);
+font-family: Roboto;
+font-size: 64px;
+font-style: normal;
+font-weight: 300;
+line-height: 64px; /* 100% */
+width: 277.763px;
+margin-left: 135px;
+
+}
+.lorum{
+  color: var(--Gray-1, #333);
+font-family: Roboto;
+font-size: 64px;
+font-style: normal;
+font-weight: 700;
+line-height: 64px; /* 100% */;
+width: 186px;
+margin-bottom: 90px;
+margin-left: 135px;
+}
+.arrows{
+  display:flex;
+  justify-content: start;
+  margin-left: 135px;
+  margin-bottom: 94px;
+}
+.slide_numbers{
+  display: grid;
+  grid-template-columns:40% 1fr 50%;
+  grid-template-rows: 1fr ;
+  margin-bottom: 94px;
+}
+.slide_number_01{
+  grid-column-start: 1;
+  grid-column-end: 2;
+  grid-row-start:1 ;
+  grid-row-end: 2;
+  color: var(--Gray-4, #BDBDBD);
+font-family: Roboto;
+font-size: 24px;
+font-style: normal;
+font-weight: 400;
+line-height: 24px; /* 100% */
+margin-left: 135px;
+}
+.slash{
+  grid-column-start: 2;
+  grid-column-end: 3;
+  grid-row-start:1 ;
+  grid-row-end: 2;
+  text-align: center;
+  width: 43.822px;
+height:max-content;
+color: var(--Gray-4, #BDBDBD);
+}
+.slide_number_02{
+  grid-column-start: 3;
+  grid-column-end: 4;
+  grid-row-start:1 ;
+  grid-row-end: 2;
+  color: var(--Gray-4, #BDBDBD);
+font-family: Roboto;
+font-size: 24px;
+font-style: normal;
+font-weight: 400;
+line-height: 24px; /* 100% */
+width: 28.975px;
 }
 
 .building__foto {
@@ -140,7 +206,101 @@ a{
   margin-top: 105px;
   flex-shrink: 0;
 }
+.button_view_project{
+  display: grid;
+  grid-column-start: 2;
+  grid-column-end: 3;
+  grid-row-start:1 ;
+  grid-row-end: 2;
+  position: relative;
+}
+.button{
+  position: absolute;
+  bottom: 0;
+  margin-left: -1px;
+}
+.about{
+  display: grid;
+  justify-content: space-around;
+  justify-items:start;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 60% 40%;
+  width: 1170px;
+  height: 435px;
+  margin-left: 135px;
+  margin-top: 120px;
+  margin-bottom: 150px;
+  background-color: var(--1, #FBFBFB); ;
+}
+.rectangle_foto_1{
+  grid-column-start: 1;
+  grid-column-end: 2;
+  grid-row-start:1 ;
+  grid-row-end: 2;
+  width: 270px;
+height: 265px;
+flex-shrink: 0;
+  margin-top:30px ;
+  margin-left:100px ;
+}
+.rectangle_foto_2{
+  grid-column-start: 2;
+  grid-column-end: 3;
+  grid-row-start:1 ;
+  grid-row-end: 3;
+  width: 270px;
+height: 345px;
+margin-top: 60px;
+margin-left: 30px;
+}
+.rectangle_foto_3{
+  grid-column-start: 1;
+  grid-column-end: 2;
+  grid-row-start:2 ;
+  grid-row-end: 3;
+  width: 270px;
+height: 140px;
+  margin-top:50px ;
+  margin-left:100px ;
+  
+}
 
+.about_textarea{
+  justify-self: start;
+  grid-column-start: 3;
+  grid-column-end: 4;
+  grid-row-start:1 ;
+  grid-row-end: 3; 
+}
+.about_h2{
+  color: var(--Gray-4, #BDBDBD);
+font-family: Roboto;
+font-size: 64px;
+font-style: normal;
+font-weight: 300;
+line-height: 64px; /* 100% */
+margin-bottom: 20px;
+margin-top: 30px;
+margin-left: 30px;
+}
+.about_p{
+  color: #000;
+font-family: Roboto;
+font-size: 16px;
+font-style: normal;
+font-weight: 300;
+line-height: 25px; /* 156.25% */
+width: 400px;
+height: 200px;
+flex-shrink: 0;
+margin-bottom: 20px;
+}
+.button_read_more{
+  width: 222px;
+height: 71px;
+flex-shrink: 0;
+background: #FFF;
+}
 .main-focus {
   display: grid;
   grid-template-rows: 0.5fr, 2fr;
@@ -507,4 +667,13 @@ a{
     padding: 25px 40px;
 
   }
+}
+
+@media screen and (max-width:1100px){
+  .header_logo{
+    display: none;
+  }
+.building_foto1{
+  display: none;
+}
 }
