--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -133,7 +133,6 @@ a {
   font-weight: 300;
   line-height: 64px; /* 100% */
   width: 277.763px;
-  margin-left: 135px;
 }
 .lorum {
   color: var(--Gray-1, #333);
@@ -144,20 +143,20 @@ a {
   line-height: 64px; /* 100% */
   width: 186px;
   margin-bottom: 90px;
-  margin-left: 135px;
 }
 .arrows {
   display: flex;
-  justify-content: start;
+  justify-content:start;
   margin-bottom: 94px;
   
 }
 .slide_numbers {
   display: grid;
-  grid-template-columns: 40% 1fr 50%;
+  grid-template-columns: 20% 1fr 70%;
   grid-template-rows: 1fr;
   margin-bottom: 94px;
 }
+
 .slide_number_01 {
   grid-column-start: 1;
   grid-column-end: 2;
@@ -169,7 +168,6 @@ a {
   font-style: normal;
   font-weight: 400;
   line-height: 24px; /* 100% */
-  margin-left: 135px;
 }
 .slash {
   grid-column-start: 2;
@@ -711,11 +709,63 @@ a {
   }
 }
 
-@media screen and (max-width: 1100px) {
-  .header_logo {
+@media screen and (max-width: 1200px) {
+  
+  .building_foto1 {
+    max-width: 100vw;
+    height: auto; 
+    overflow-x: hidden;
+  }
+
+  .project-lorum__left_path{
+    padding-top: 90px;
+    padding-bottom: 40px;
+  }
+  .rectangle_foto_2 {
     display: none;
   }
-  .building_foto1 {
-    display: none;
+
+  .about{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+  }
+  .rectangle_foto_1{
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 1;
+    grid-row-end: 2;
+  }
+  .rectangle_foto_2{
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 2;
+    grid-row-end: 3;
+  }
+  .about_textarea{
+    grid-column-start: 2;
+    grid-column-end: 3;
+    grid-row-start: 1;
+    grid-row-end: 3;
   }
 }
+
+@media screen and (max-width: 1100px){
+  .header__logo{
+    display: none;
+  }
+
+.nav{
+  display: grid;
+  grid-area: "nav__main nav__gallery nav__projects nav__certifications nav__contacts";
+}
+.nav__main {
+  margin-left: 0;
+}
+
+.nav__main,.nav__gallery,.nav__projects, .nav__certifications,.nav__contacts  {
+  margin-top: 5px;
+  margin-left: 10px;
+}
+}
+
