--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -737,26 +737,6 @@ a {
   }
 }
 
-@media screen and (max-width:1100px) {
-  .header_logo {
-    display: none;
-  }
-
-  .building_foto1 {
-    display: none;
-  }
-}
-
-@media screen and (max-width: 1100px) {
-  .header_logo {
-    display: none;
-  }
-
-  .building_foto1 {
-    display: none;
-  }
-}
-
 @media screen and (max-width: 1200px) {
 
   .building_foto1 {
@@ -824,4 +804,45 @@ a {
     margin-top: 5px;
     margin-left: 10px;
   }
+}
+@media screen and (max-width: 600px) {
+  .building_foto1{
+    display: none;
+  }
+  .rectangle_foto_1,.rectangle_foto_2,.rectangle_foto_3{
+    display: none;
+  }
+  .about{
+    display: grid;
+  }
+  .about_textarea{
+    grid-row-start: 1;
+    grid-row-end: 2;
+    grid-column-start: 1;
+    grid-column-end: 2;
+    margin-left: 50px;
+  }
+  .button_read_more{
+    margin-left: 80px;
+  }
+  .about_h2{
+    margin-left: 90px;
+  }
+  .project-lorum{
+    display: grid;
+  }
+  .button_view_project{
+    grid-row-start: 1;
+    grid-row-end: 2;
+    grid-column-start: 1;
+    grid-column-end: 2;
+    margin-left:-80px;
+    margin-top: 300px;
+}
+  .project,.lorum{
+    margin-left:130px;
+}
+  .arrows,.slide_numbers{
+    display:none;
+}
 }
