add hover effect for button

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -481,7 +481,7 @@ a {
 
 .contacts {
   margin-top: 120px;
-  margin-bottom: 45%;
+  margin-bottom: 120px;
 }
 
 .contacts__title {
@@ -556,8 +556,8 @@ a {
   display: none;
 }
 
-.placeinput input:invalid + .place_holder,
-.placeinput textarea:invalid + .place_holder {
+.placeinput input:invalid+.place_holder,
+.placeinput textarea:invalid+.place_holder {
   display: inline;
 }
 
@@ -586,6 +586,7 @@ a {
   text-align: center;
   display: flex;
   cursor: pointer;
+  transition: all .5s ease;
 }
 
 .contacts__btn::after {
@@ -596,6 +597,12 @@ a {
   background-image: url("../images/icons/arrow-right.svg");
   background-repeat: no-repeat;
   right: 49px;
+
+}
+
+.contacts__btn:hover {
+  background-color: rgb(162, 159, 159);
+  transform: translateX(5%) translateY(-5%);
 }
 
 .footer {
@@ -650,11 +657,11 @@ a {
   text-decoration: none;
 }
 
-.footer__info-link + .footer__info-link {
+.footer__info-link+.footer__info-link {
   margin-top: 16px;
 }
 
-.footer__contacts-link + .footer__contacts-link {
+.footer__contacts-link+.footer__contacts-link {
   margin-top: 32px;
 }
 
@@ -770,7 +777,7 @@ a {
     font-size: 24px;
   }
 
-  .footer__info-link + .footer__info-link {
+  .footer__info-link+.footer__info-link {
     margin-top: 12px;
   }
 }
@@ -924,7 +931,9 @@ a {
     display: none;
   }
 }
+
 @media screen and (max-width: 500px) {
+
   .project,
   .lorum,
   .about_h2 {
@@ -932,7 +941,9 @@ a {
     line-height: 60px;
   }
 }
+
 @media screen and (max-width: 350px) {
+
   .project,
   .lorum,
   .about {
